item #96 backport to JDK8